--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
   adapter: sqlite3
-  database: db/test.sqlite3
+  database: db/development.sqlite3
   pool: 5
   timeout: 5000
 
