--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 # SQLite version 3.x
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
-production:
+development:
   adapter: sqlite3
   database: db/development.sqlite3
   pool: 5
@@ -15,12 +15,12 @@ test:
   pool: 5
   timeout: 5000
 
-development:
+production:
   adapter: mysql2
   encoding: utf8
   database: trueque
   pool: 5
   username: root
-  password: root
+  password: 
   host: localhost
-  socket: /Applications/MAMP/tmp/mysql/mysql.sock
+  # socket: /Applications/MAMP/tmp/mysql/mysql.sock
